...
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustNothing"
    tools:context=".SearchActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/my_list_text"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:id="@+id/selected_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/plan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_list_text" />

    <EditText
...
