...
        android:layout_marginStart="5dp"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_item_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/search_item_checkbox"
        android:layout_width="48dp"
...
